# Qbox

./: .gitignore  .nvimrc  .vimrc  CMakeLists.txt  README.md  field.cc  field.h  field2.cc  field2.h  h5out.cc  h5out.h  main.cc  makefile  matrix.cc  matrix.h  monitor.cc  monitor.h  object.cc  object.h  old.cc  pml.cc  process.py  source.cc  source.h  test.cc  test.py  test2.cc  tfsf.cc  todo.txt
bench/: flux.py  makefile  mie.cpp  mie.py  mie.sim  simple.cpp
bench/mie_theory/: cylskg.2.f
docs/: Doxyfile
field1D/: field.cc  field.h  main.cc
include/: apine.h  box_monitor.h  dft.h  dynamic_object.h  field.h  field2.h  fieldIO.h  freq.h  grid.h  h5out.h  matrix.h  monitor.h  object.h  objects.h  pml.h  qbox.h  source.h  surface_monitor.h  tfsf.h  timer.h  vec.h
include/geometry/: block.h  cylinder.h  ellipse.h  geometry.h  medium.h
include/materials/: creation.h  debye.h  debye_polarization.h  drude.h  drude_polarization.h  lorentz.h  lorentz_polarization.h  material.h  polarization.h  simple_material.h
include/monitors/: box_monitor.h  cylinder_monitor.h  flux.h  force.h  freq.h  monitor.h  monitor_types.h  ntff.h  point_monitor.h  rank_monitor.h  surface_monitor.h  volume_monitor.h
include/objects/: cylinder.h  medium.h  object.h  rectangle.h
include/sources/: continuous_line_source.h  continuous_point_source.h  custom_line_source.h  custom_point_source.h  gaussian_line_source.h  gaussian_point_source.h  line_source.h  point_source.h  source.h  time_profile.h
include/time_monitors/: point_time_monitor.h  surface_time_monitor.h  time_monitor.h  volume_time_monitor.h
old/: main.cc  makefile  test.cc
old/field1D/: main.cc
old/field1D/field1D/: makefile  process.py
old/include/: cylinder_monitor.h  freq.h  surface_monitor.h  volume_monitor.h
old/src/: cylinder_monitor.cpp  freq.cpp  volume_monitor.cpp
post/: mie.py  monitors.py  process.py  test.py  video.sh
src/: box_monitor.cpp  dft.cpp  dynamic_object.cpp  field.cc  field.cpp  field2.cc  field2.cpp  fieldIO.cpp  freq.cpp  grid.cpp  h5out.cpp  monitor.cpp  object.cpp  pml.cpp  source.cpp  surface_monitor.cpp  tfsf.cpp  timer.cpp
src/geometry/: block.cpp  cylinder.cpp  ellipse.cpp  geometry.cpp  medium.cpp
src/materials/: creation.cpp  debye.cpp  debye_polarization.cpp  drude.cpp  drude_polarization.cpp  lorentz.cpp  lorentz_polarization.cpp  material.cpp  polarization.cpp  simple_material.cpp
src/monitors/: box_monitor.cpp  cylinder_monitor.cpp  flux.cpp  force.cpp  freq.cpp  monitor.cpp  ntff.cpp  surface_monitor.cpp  volume_monitor.cpp
src/objects/: cylinder.cpp  medium.cpp  object.cpp  rectangle.cpp
src/sources/: continuous_line_source.cpp  continuous_point_source.cpp  custom_line_source.cpp  custom_point_source.cpp  gaussian_line_source.cpp  gaussian_point_source.cpp  line_source.cpp  point_source.cpp  source.cpp  time_profile.cpp
src/time_monitors/: point_time_monitor.cpp  surface_time_monitor.cpp  time_monitor.cpp  volume_time_monitor.cpp
tests/: main.cpp  mie.cpp  simple.cpp
tests/debye/: create.py  cyl.in  mie.cpp
tests/drude/: compare.py  create.py  mie.cpp
tests/dynamics/: animation.py  dimer.cpp  moving.cpp  plot.py  test.cpp
tests/dynamics/simple/: animation.py  moving.cpp  run
tests/force/: force.cpp  post.py
tests/lorentz/: create.py  mie.cpp
tests/mie/: compare.py  mie.cpp
tests/more/: four_ellipses.cpp
tests/ntff/: ntff.cpp  test.py
tests/pml/: reflection.cpp  reflection.py  stability.cpp  stability.py
